--- a/Makefile.am
+++ b/Makefile.am
@@ -92,7 +92,7 @@ distcheck-light-man:
 
 # Make a distcheck (and check in particular) with enabled valgrind and debug info
 memcheck distcheck-valgrind:
-	@echo "See also scripts/valgrind in NUT sources for a helper tool"
+	@echo "See also scripts/valgrind in NUT sources for a helper tool" >&2
 	+$(MAKE) $(AM_MAKEFLAGS) DISTCHECK_FLAGS="$(DISTCHECK_VALGRIND_FLAGS)" distcheck
 
 # workaround the dist generated files that are also part of the distribution
@@ -365,10 +365,10 @@ $(abs_top_builddir)/ChangeLog: tools/gitlog2changelog.py dummy-stamp
 	    if test -e .git ; then \
 	        NUT_GITDIR=".git" ; if test -r "$${NUT_GITDIR}" -a ! -d "$${NUT_GITDIR}" ; then GD="`grep -E '^gitdir:' "$${NUT_GITDIR}" | sed 's/^gitdir: *//'`" && test -n "$$GD" -a -d "$$GD" && NUT_GITDIR="$$GD" ; fi ; \
 	        if test -s "$@" -a -d "$${NUT_GITDIR}" && test -z "`find "$${NUT_GITDIR}" -newer "$@" 2>/dev/null`" ; then \
-	            echo "  DOC-CHANGELOG-GENERATE        $@ : SKIP (keep existing)" ; \
+	            echo "  DOC-CHANGELOG-GENERATE        $@ : SKIP (keep existing)" >&2 ; \
 	            echo "Using still-valid ChangeLog file generated earlier from same revision of Git source metadata in '$${NUT_GITDIR}'" >&2 ; \
 	        else \
-	            echo "  DOC-CHANGELOG-GENERATE        $@" ; \
+	            echo "  DOC-CHANGELOG-GENERATE        $@" >&2 ; \
 	            CHANGELOG_FILE="$@" $(WITH_PDF_NONASCII_TITLES_ENVVAR) $(abs_top_builddir)/tools/gitlog2changelog.py $(GITLOG_START_POINT) || { \
 	                echo "  DOC-CHANGELOG-GENERATE        $@ : FAILED (non-fatal)" >&2 ; \
 	                printf "gitlog2changelog.py failed to generate the ChangeLog.\n\nNOTE: See https://github.com/networkupstools/nut/commits/master for change history.\n\n" > "$@" ; \
@@ -376,13 +376,13 @@ $(abs_top_builddir)/ChangeLog: tools/gitlog2changelog.py dummy-stamp
 	        fi ; \
 	    else \
 	        if test x"$(abs_top_srcdir)" != x"$(abs_top_builddir)" -a -s ./ChangeLog ; then \
-	            echo "  DOC-CHANGELOG-GENERATE        $@ : SKIP (keep existing)" ; \
+	            echo "  DOC-CHANGELOG-GENERATE        $@ : SKIP (keep existing)" >&2 ; \
 	            echo "Using distributed ChangeLog file from sources" >&2 ; \
 	            rm -f "$@" || true ; \
 	            cat ./ChangeLog > "$@" ; \
 	        else \
 	            if test -s "$@" ; then \
-	                echo "  DOC-CHANGELOG-GENERATE        $@ : SKIP (keep existing)" ; \
+	                echo "  DOC-CHANGELOG-GENERATE        $@ : SKIP (keep existing)" >&2; \
 	                echo "Using distributed ChangeLog file from sources" >&2 ; \
 	            else \
 	                echo "  DOC-CHANGELOG-GENERATE        $@ : FAILED (non-fatal)" >&2 ; \
